@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 07-03-2006 fixed: if the last focused control of a control group is disabled, no other control will get the focus
  - 07-03-2006 fixed: party mode table is missing when a new musicdatabase is created
  - 07-03-2006 fixed: some dvd menu's with still frames would have double overlays, one stuck one movable
  - 07-03-2006 fixed: ListItem.Directory etc. weren't working correctly.
